--- a/templates/app_1.html
+++ b/templates/app_1.html
@@ -20,6 +20,7 @@
 			<button type="submit">Submit</button>
 			<div></div>
 			<div></div>
-		</div>	
+		</div>
+		<b>{{output}}</b>
     </form>
 {% endblock %}
