--- a/templates/app_1.html
+++ b/templates/app_1.html
@@ -22,6 +22,8 @@
 			<div></div>
 			<div></div>
 		</div>
-		<b>{{output}}</b>
+		<div>
+			<b>{{output}}</b>
+		</div>
     </form>
 {% endblock %}
