--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="static/css/pico.slim.css">
+	<link rel="stylesheet" href="static/css/pico.css">
     <title>{% block title %} {% endblock %} - 1363V4</title>
 </head>
 <body>
