--- a/templates/app_1.html
+++ b/templates/app_1.html
@@ -23,7 +23,9 @@
 			<div></div>
 		</div>
 		<div>
-			<b>{{output}}</b>
+			{% for message in get_flashed_messages() %}
+				<div><b>{{ message }}</b></div>
+			{% endfor %}
 		</div>
     </form>
 {% endblock %}
