--- a/templates/app_1.html
+++ b/templates/app_1.html
@@ -3,7 +3,7 @@
 {% block title %} App 1 {% endblock %}
 
 {% block content %}
-	<form method=""post">
+	<form method="post">
 		<div class="grid">
 			<div></div>
 			<div></div>
