--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="static/img/favicon.png">
+	<link rel="shortcut icon" href="/static/img/favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-	<link rel="stylesheet" href="static/css/custom.css">
+	<link rel="stylesheet" href="/static/css/custom.css">
     <title>{% block title %} {% endblock %} - 1363V4</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
 		<details role="list">
 			<summary aria-haspopup="listbox">Apps</summary>
 			<ul role="listbox">
-				<li><a href="{{ url_for('app_1') }}">App 1</a></li>
+				<li><a href="{{ url_for('quiz') }}">Quiz</a></li>
 			</ul>
 		</details>
 		</ul>
