--- a/templates/index.html
+++ b/templates/index.html
@@ -4,4 +4,6 @@
 
 {% block content %}
 <h1>Coucou !</h1>
+<p>Ceci est le serveur de test de Louis-Emmanuel.</p>
+<p>Les apps sont dans le menu déroulant en haut à droite.</p>
 {% endblock %}
