--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,11 +1,22 @@
-/* Indigo Light scheme (Default) */
+/* Red Light scheme (Default) */
 /* Can be forced with data-theme="light" */
 [data-theme="light"],
 :root:not([data-theme="dark"]) {
-  --primary: #3949ab;
-  --primary-hover: #303f9f;
-  --primary-focus: rgba(57, 73, 171, 0.125);
+  --primary: #e53935;
+  --primary-hover: #d32f2f;
+  --primary-focus: rgba(229, 57, 53, 0.125);
   --primary-inverse: #FFF;
+}
+
+/* Red Dark scheme (Auto) */
+/* Automatically enabled if user has Dark mode enabled */
+@media only screen and (prefers-color-scheme: dark) {
+  :root:not([data-theme="light"]) {
+    --primary: #e53935;
+    --primary-hover: #f44336;
+    --primary-focus: rgba(229, 57, 53, 0.25);
+    --primary-inverse: #FFF;
+  }
 }
 
 /* Red Dark scheme (Forced) */
