--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -3,12 +3,18 @@
 {% block title %} Quiz {% endblock %}
 
 {% block content %}
+	<h3>Quiz DCP</h3>
 	<div class="grid">
 		<div></div>
 		<div>
-			Bienvenue dans le Quizz Sopra ! <br>
-			Ce quizz vous donnera une estimation de votre cyber. <br>
-			Le quizz ne prend que 5 minutes ! <br>
+			Bienvenue dans le Quizz Sopra ! 
+			<br>
+			<br>
+			Ce quizz vous donnera une estimation de votre gestion des Données à Caractère Personnel (DCP). 
+			<br>
+			<br>
+			Le quizz ne prend que 5 minutes ! 
+			<br>
 			<br>
 			<div class="grid">
 				<div></div>
