--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-<h1>Coucou !</h1>
-<p>Ceci est le serveur de test de Louis-Emmanuel.</p>
+<h1>#3110</h1>
+<p>Serveur de test de Louis-Emmanuel.</p>
 <p>Les apps sont dans le menu déroulant en haut à droite.</p>
 {% endblock %}
