--- a/templates/v2/quiz_questions.html
+++ b/templates/v2/quiz_questions.html
@@ -16,11 +16,11 @@
 				<fieldset>
 					<label for="r11">
 					<input type="radio" id="r1" name="dcp1" value="r11" checked>
-					Des personnes sont chargées d'effectuer une veille règlementaire et sont veillées de suivre le respect de la confidentialité des données.
+					Des personnes sont chargées d'effectuer une veille règlementaire et de suivre le respect de la confidentialité des données.
 					</label>
 					<label for="r12">
 					<input type="radio" id="r2" name="dcp1" value="r12">
-					Des évaluations des risques de conformité aux lois et aux règlements sont mises en places. Des plans d'actions sont réalisés en cas d'écart.
+					Des évaluations des risques de conformité aux lois et aux règlements sont mises en place. Des plans d'action sont réalisés en cas d'écart.
 					</label>
 					<label for="r13">
 					<input type="radio" id="r3" name="dcp1" value="r13">
@@ -40,11 +40,11 @@
 				<fieldset>
 					<label for="r21">
 					<input type="radio" id="r21" name="dcp2" value="r21" checked>
-					Des documents engageant les collaborateurs : politique de confidentialité ; clause dans le contrat
+					Des documents engageant les <b>collaborateurs</b> : politique de confidentialité ; clause dans le contrat
 					</label>
 					<label for="r22">
 					<input type="radio" id="r22" name="dcp2" value="r22">
-					Des documents engageant l'entreprise : politique de protection des données, engagement dans la protection des données,…
+					Des documents engageant <b>l'entreprise</b> : politique de protection des données, engagement dans la protection des données,…
 					</label>
 					<label for="r23">
 					<input type="radio" id="r23" name="dcp2" value="r23">
@@ -92,11 +92,11 @@
 				<fieldset>
 					<label for="r41">
 					<input type="radio" id="r41" name="dcp4" value="r41" checked>
-					Des guides de bonnes pratiques, et documents de sensibilisation sont partagées au sein de votre entreprise. +  L'entreprise communique, rappelle et forme régulièrement ses collaborateurs sur la sensibilisation du RGPD.
+					Des guides de bonnes pratiques, et documents de sensibilisation sont partagés au sein de votre entreprise. L'entreprise communique, rappelle et forme régulièrement ses collaborateurs sur la sensibilisation du RGPD.
 					</label>
 					<label for="r42">
 					<input type="radio" id="r42" name="dcp4" value="r42">
-					Des guides de bonnes pratiques, et documents de sensibilisation sont partagées au sein de votre entreprise
+					Des guides de bonnes pratiques, et documents de sensibilisation sont partagés au sein de votre entreprise
 					</label>
 					<label for="r43">
 					<input type="radio" id="r43" name="dcp4" value="r43">
@@ -110,7 +110,7 @@
 		<div class="space"></div>
 		<div class="grid">
 			<div>
-				Qui, dans votre entreprise, est chargé de veiller à la mise à jour du registre des activités de traitement de données personnelle qui sont utiles à la gestion des ressources humaines ?
+				Qui, dans votre entreprise, est chargé de veiller à la mise à jour du registre des activités de traitement de données personnelles qui sont utiles à la gestion des ressources humaines ?
 			</div>
 			<div>
 				<fieldset>
@@ -158,7 +158,7 @@
 		<div class="space"></div>
 		<div class="grid">
 			<div>
-				Lors d'une violation des données à caractère personnelles, un processus est-il assuré dans votre entreprise ?
+				Lors d'une violation des données à caractère personnel, un processus est-il assuré dans votre entreprise ?
 			</div>
 			<div>
 				<fieldset>
