--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
 			<ul role="listbox">
 				<li><a href="{{ url_for('quiz_v1') }}">Quiz v1</a></li>
 				<li><a href="{{ url_for('quiz_v2') }}">Quiz v2</a></li>
+				<li><a href="{{ url_for('lrp') }}">LRP</a></li>
 			</ul>
 		</details>
 		</ul>
