--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -3,7 +3,7 @@
 {% block title %} LRP {% endblock %}
 
 {% block content %}
-	<div>
+	<form method="POST">
         <div class="grid">
             <div></div>
 			<div>
@@ -11,7 +11,7 @@
 			</div>
 			<div></div>
 		</div>
-	</div>
+	</form>
     <div class="space"></div>
     <div>
         {{leg1}} {{leg2}}
