--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -14,6 +14,10 @@
 	</form>
     <div class="space"></div>
     <div>
-        {{leg1}} {{leg2}}
+        <li>
+            {{leg1}} 
+            {{leg2}}
+            <img src="/static/img/favicon.png" width="50" height="50">
+        </li>
     </div>
 {% endblock %}
