--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -13,11 +13,9 @@
 		</div>
 	</form>
     <div class="space"></div>
-    <div>
-        <li>
-            {{leg1}} 
-            {{leg2}}
-            <img src="/static/img/favicon.png" width="50" height="50">
-        </li>
+    <div class="grid">
+        <div>{{leg1}}</div>
+        <div>{{leg2}}</div>
+        <img src="/static/img/favicon.png" width="50" height="50">
     </div>
 {% endblock %}
