--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -14,9 +14,7 @@
 	</form>
     <div class="space"></div>
     <div class="grid">
-        <div>{{leg1}}</div>
-        <div>{{leg2}}</div>
-        <img src="/static/img/champs/img_{{leg1}}" width="50" height="50">
-        <img src="/static/img/champs/img_{{leg2}}" width="50" height="50">
+        <img src="/static/img/champs/img_{{leg1}}.webp" width="50" height="50">
+        <img src="/static/img/champs/img_{{leg2}}.webp" width="50" height="50">
     </div>
 {% endblock %}
