--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -7,14 +7,14 @@
         <div class="grid">
             <div></div>
 			<div>
-                <button type="submit">Go !</button>
+                <button type="submit">Roll champs</button>
 			</div>
 			<div></div>
 		</div>
 	</form>
     <div class="space"></div>
     <div class="grid">
-        <img src="/static/img/champs/img_{{leg1}}.webp" width="50" height="50">
-        <img src="/static/img/champs/img_{{leg2}}.webp" width="50" height="50">
+        <img src="/static/img/champs/img_{{leg1}}.webp">
+        <img src="/static/img/champs/img_{{leg2}}.webp">
     </div>
 {% endblock %}
