--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -14,7 +14,9 @@
 	</form>
     <div class="space"></div>
     <div class="grid">
+        <div></div>
         <img src="/static/img/champs/champ_{{leg1}}.webp">
         <img src="/static/img/champs/champ_{{leg2}}.webp">
+        <div></div>
     </div>
 {% endblock %}
