--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -12,10 +12,10 @@
 			<div></div>
 		</div>
 	</form>
-    <div class="space"></div>
     <div class="grid">
         <div></div>
         <img src="/static/img/champs/champ_{{leg1}}.webp">
+        <div></div>
         <img src="/static/img/champs/champ_{{leg2}}.webp">
         <div></div>
     </div>
