--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,11 @@
 				<li><a href="{{ url_for('quiz_v1') }}">Quiz v1</a></li>
 				<li><a href="{{ url_for('quiz_v2') }}">Quiz v2</a></li>
 				<li><a href="{{ url_for('lrp') }}">LRP</a></li>
+				<li><a href="{{ url_for('jml') }}">JML</a></li>
 			</ul>
 		</details>
 		</ul>
-	</nav>
-	
+	</nav>	
 	<main class="container">
 		{% block content %} {% endblock %}
 	</main>
