--- a/templates/jml.html
+++ b/templates/jml.html
@@ -8,6 +8,7 @@
         <div></div>
         <details role="list">
             <summary aria-haspopup="listbox" role="button">
+            <img src="/static/img/flags/flag-antarctica.png" width="50" height="50">
             Ville D
             </summary>
             <ul role="listbox">
