--- a/templates/jml.html
+++ b/templates/jml.html
@@ -8,8 +8,8 @@
         <div></div>
         <details role="list">
             <summary aria-haspopup="listbox" role="button">
-            <img src="/static/img/flags/flag-antarctica.png" width="50" height="50">
-            Ville D
+            <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
+            {{ville_d}}
             </summary>
             <ul role="listbox">
                 <li><a>J1</a></li>
@@ -17,7 +17,6 @@
                 <li><a>J3</a></li>
             </ul>
         </details>
-        <div></div>
         <button>Ville A</button>
         <div></div>
     </div>
