--- a/templates/jml.html
+++ b/templates/jml.html
@@ -7,7 +7,7 @@
     <div></div>
     <details role="list">
         <form method="POST">
-        <summary aria-haspopup="listbox" role="button">
+        <summary aria-haspopup="listbox" role="button" type="submit">
             <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
             {{ville_d}}
         </summary>
