--- a/templates/jml.html
+++ b/templates/jml.html
@@ -5,20 +5,20 @@
 {% block content %}
 <div class="grid">
     <div></div>
-    <details role="list">
-        <summary aria-haspopup="listbox" role="button" type="submit">
-            <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
-            {{ville_d}}
-        </summary>
-        <form method="POST">
+    <form method="POST">
+        <details role="list">
+            <summary aria-haspopup="listbox" role="button" type="submit">
+                <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
+                {{ville_d}}
+            </summary>
             <ul role="listbox">
                 <li><a>J1</a></li>
                 <li><a>J2</a></li>
                 <li><a>J3</a></li>
             </ul>
-        </form>
-    </details>
-    <button>Ville A</button>
+        </details>
+    </form>
+    <button>Ville X</button>
     <div></div>
 </div>
 {% endblock %}
