--- a/templates/jml.html
+++ b/templates/jml.html
@@ -7,12 +7,14 @@
     <div></div>
     <form method="POST">
         <details role="list">
-            <summary aria-haspopup="listbox" role="button" type="submit">
+            <summary aria-haspopup="listbox" role="button">
                 <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
                 {{ville_d}}
             </summary>
             <ul role="listbox">
-                <li><a>J1</a></li>
+                <li>
+                    <button type="submit">Ville X</button>
+                </li>
                 <li><a>J2</a></li>
                 <li><a>J3</a></li>
             </ul>
