--- a/templates/jml.html
+++ b/templates/jml.html
@@ -5,21 +5,21 @@
 {% block content %}
 <div class="grid">
     <div></div>
-    <form method="POST">
-        <details role="list">
-            <summary aria-haspopup="listbox" role="button">
-                <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
-                {{ville_d}}
-            </summary>
-            <ul role="listbox">
+    <details role="list">
+        <summary aria-haspopup="listbox" role="button">
+            <img src="/static/img/flags/flag-antarctica.png" width="30" height="30">
+            {{ville_d}}
+        </summary>
+        <ul role="listbox">
+            <form method="POST">
                 <li>
-                    <button type="submit">Ville X</button>
+                    <button type="submit" name="button_text" value="Ville 1">Ville 1</button>
                 </li>
                 <li><a>J2</a></li>
                 <li><a>J3</a></li>
-            </ul>
-        </details>
-    </form>
+            </form>
+        </ul>
+    </details>
     <button>Ville X</button>
     <div></div>
 </div>
