--- a/templates/jml.html
+++ b/templates/jml.html
@@ -31,7 +31,7 @@
             </form>
         </ul>
     </details>
-    <button>Ville X</button>
+    <button>{{ ville_a }}</button>
     <div></div>
 </div>
 <div>
