--- a/templates/jml.html
+++ b/templates/jml.html
@@ -36,6 +36,6 @@
 </div>
 <div>
 <p>Essayez d'atteindre {{ ville_a }}</p>
-<p>Nombre d'étapes : {{ étapes }}</p>
+<p>Nombre d'étapes : {{ etapes }}</p>
 </div>
 {% endblock %}
