--- a/templates/jml.html
+++ b/templates/jml.html
@@ -6,13 +6,10 @@
 {% if win %}
     <dialog open>
         <article>
-        <header>
-            <a href="#close" aria-label="Close" class="close"></a>
-            Congratulations!
-        </header>
-        <p>
-            A winner is you.
-        </p>
+            <header>
+                A winner is you!
+            </header>
+            <a href="/jml" role="button">Play again</a>
         </article>
   </dialog>
 {% endif %}
