--- a/templates/jml.html
+++ b/templates/jml.html
@@ -10,6 +10,7 @@
                 A winner is you!
             </header>
             <a href="/jml" role="button">Play again</a>
+            <a href="/" role="button">Play again</a>
         </article>
   </dialog>
 {% endif %}
