--- a/templates/jml.html
+++ b/templates/jml.html
@@ -33,6 +33,6 @@
 </div>
 <div>
 <p>Essayez d'atteindre {{ ville_a }}</p>
-<p>Nombre d'étapes : {{ etapes }}</p>
+<p>Nombre d'étapes minimum : {{ etapes }}</p>
 </div>
 {% endblock %}
