--- a/templates/jml.html
+++ b/templates/jml.html
@@ -28,7 +28,9 @@
             </form>
         </ul>
     </details>
-    <button>{{ ville_a }}</button>
+    <form>
+        <button type="submit" name="ville" value="{{ ville_a }}">{{ ville_a }}</button>
+    </form>
     <div></div>
 </div>
 <div>
