--- a/templates/jml.html
+++ b/templates/jml.html
@@ -28,7 +28,7 @@
             </form>
         </ul>
     </details>
-    <form>
+    <form method="POST">
         <button type="submit" name="ville" value="{{ ville_a }}">{{ ville_a }}</button>
     </form>
     <div></div>
