--- a/templates/jml.html
+++ b/templates/jml.html
@@ -38,7 +38,7 @@
 <p>Essayez d'atteindre {{ ville_a }}</p>
 <p>Nombre d'étapes minimum : {{ etapes }}</p>
 <p>
-{{ ville_d }}
+{{ ogd }}
 {% for step in steps %}
     -> {{ step }}
 {% endfor %}
