--- a/templates/jml.html
+++ b/templates/jml.html
@@ -35,7 +35,7 @@
     <div></div>
 </div>
 <div>
-<p>Essayez d'atteindre {{ ville_a }}</p>
+<p><b>Essayez d'atteindre {{ ville_a }} !</b></p>
 <p>Nombre d'étapes minimum : {{ etapes }}</p>
 <p>
 {{ ogd }}
