--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
 				<li><a href="{{ url_for('quiz_v2') }}">Quiz v2</a></li>
 				<li><a href="{{ url_for('lrp') }}">LRP</a></li>
 				<li><a href="{{ url_for('jml') }}">JML</a></li>
+				<li><a href="{{ url_for('um') }}">UM</a></li>
 			</ul>
 		</details>
 		</ul>
