--- a/templates/lrp.html
+++ b/templates/lrp.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="grid">
     <div></div>
-    <img src="/static/img/champs/champ_{{leg1}}.webp">
+    <img src="/static/img/champs/champ_{{leg1}}.webp" width="180" height="272">
     <div></div>
-    <img src="/static/img/champs/champ_{{leg2}}.webp">
+    <img src="/static/img/champs/champ_{{leg2}}.webp" width="180" height="272">
     <div></div>
 </div>
 <form method="POST">
