--- a/templates/um.html
+++ b/templates/um.html
@@ -4,7 +4,13 @@
 
 {% block content %}
 <form method="POST">
-    <input type="text" id="player" name="player" placeholder="Player name" required>
+    <div class="grid">
+        <div></div>
+		<div>
+            <input type="text" id="player" name="player" placeholder="Player name" required>
+		</div>
+		<div></div>
+	</div>
     <div class="grid">
         <div></div>
 		<div>
