--- a/templates/um2.html
+++ b/templates/um2.html
@@ -4,16 +4,19 @@
 
 {% block content %}
 <div class="grid">
-    <div></div>
-    <img src="/static/img/champs/champ_69.webp">
-    {{ power }}
-    {{ players }}
-    <div></div>
+    <div>
+        <img src="/static/img/champs/champ_69.webp">
+    </div>
+    <div>
+        <h1>{{ power_name }}</h1>
+        <p>{{ power_desc }}</p>
+    </div>
 </div>
+<div class="space"></div>
 <div class="grid">
     <div></div>
     <div>
-        <a href="{{url_for('um')}}" ><button type="submit">Back !</button></a>
+        <a href="{{url_for('um')}}" ><button type="submit">Nouvelle partie</button></a>
     </div>
     <div></div>
 </div>
