--- a/templates/um.html
+++ b/templates/um.html
@@ -4,6 +4,13 @@
 
 {% block content %}
 <form method="POST">
+	<div class="grid">
+        <div></div>
+		<div>
+            <p>Attendez le signal !</p>>
+		</div>
+		<div></div>
+	</div>
     <div class="grid">
         <div></div>
 		<div>
