--- a/templates/um.html
+++ b/templates/um.html
@@ -7,7 +7,7 @@
 	<div class="grid">
         <div></div>
 		<div>
-            <p>Attendez le signal !</p>>
+            <p>Attendez le signal !</p>
 		</div>
 		<div></div>
 	</div>
