--- a/templates/um2.html
+++ b/templates/um2.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 <div class="grid">
-    <div>
+    <div class="container">
         <img src="/static/img/champs/champ_69.webp">
     </div>
     <div>
-        <h1>{{ power_name }}</h1>
+        <h2>{{ power_name }}</h2>
         <p>{{ power_desc }}</p>
     </div>
 </div>
