--- a/templates/um2.html
+++ b/templates/um2.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <div class="grid">
-    <div class="container">
-        <img src="/static/img/champs/champ_69.webp">
+    <div>
+        <img class="container" src="/static/img/champs/champ_69.webp">
     </div>
     <div>
         <h2>{{ power_name }}</h2>
