--- a/templates/um2.html
+++ b/templates/um2.html
@@ -5,10 +5,11 @@
 {% block content %}
 <div class="grid">
     <div>
-        <img class="container" src="/static/img/champs/champ_69.webp">
+        <img align="center" src="/static/img/um/um_{{ um_id }}.png">
     </div>
     <div>
         <h2>{{ power_name }}</h2>
+        <div class="line"></div>
         <p>{{ power_desc }}</p>
     </div>
 </div>
