--- a/templates/um.html
+++ b/templates/um.html
@@ -3,6 +3,15 @@
 {% block title %} Uno Magique {% endblock %}
 
 {% block content %}
+{% if reset %}
+    <dialog open>
+        <article>
+            <header>
+                Reset success
+            </header>
+        </article>
+  </dialog>
+{% endif %}
 <form method="POST">
 	<div class="grid">
         <div></div>
@@ -14,7 +23,7 @@
     <div class="grid">
         <div></div>
 		<div>
-            <input type="text" id="player" name="player" placeholder="Player name" required>
+            <input type="text" id="player" name="player" placeholder="Player name">
 		</div>
 		<div></div>
 	</div>
