--- a/templates/um.html
+++ b/templates/um.html
@@ -4,13 +4,7 @@
 
 {% block content %}
 {% if reset %}
-    <dialog open>
-        <article>
-            <header>
-                Reset success
-            </header>
-        </article>
-  </dialog>
+	<p>Reset success</p>
 {% endif %}
 <form method="POST">
 	<div class="grid">
@@ -30,7 +24,7 @@
     <div class="grid">
         <div></div>
 		<div>
-            <button type="submit">Go !</button>
+            <button type="submit">C'est parti !</button>
 		</div>
 		<div></div>
 	</div>
