--- a/templates/um2.html
+++ b/templates/um2.html
@@ -11,6 +11,7 @@
         <h2>{{ power_name }}</h2>
         <div class="line"></div>
         <p>{{ power_desc }}</p>
+        <p>Bonne chance {{ player_name }} !</p>
     </div>
 </div>
 <div class="space"></div>
