--- a/templates/base.html
+++ b/templates/base.html
@@ -20,17 +20,7 @@
 	        </nav>
 	    </header>
 
-	    <main>
-	        <section class="big-text">Big text</section>
-
-	        <section class="content">
-	            <h1>Heading</h1>
-	            <p>Paragraph of text</p>
-	            <button type="button">Button</button>
-	        </section>
-
-	        <div class="decorative-break"></div>
-	    </main>
+	    {{ content }}
 
 	    <footer>Footer text</footer>
 
