--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %} Home {% endblock %}
-
 {% block content %}
-<h1>#3110</h1>
-<p>Serveur de test de Louis-Emmanuel.</p>
-<p>Les apps sont dans le menu déroulant en haut à droite.</p>
+<main>
+    <section class="big-text">Big text</section>
+
+    <section class="content">
+        <h1>Heading</h1>
+        <p>Paragraph of text</p>
+        <button type="button">Button</button>
+    </section>
+
+    <div class="decorative-break"></div>
+</main>
 {% endblock %}
