--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 	        </nav>
 	    </header>
 
-	    {{ content }}
+	    {% block content %} {% endblock %}
 
 	    <footer>Footer text</footer>
 
