--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 	    <header>
-	        <div id="logo">LOGO</div>
+	        <div id="logo">BIODIVER</div>
 	        <nav>
 	            <ul>
 	                <li><a href="#">Log in</a></li>
