--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,8 @@
 
 {% block content %}
 <div>
-    <p>this is my test website</p>
-    <p>i use it to learn web app basics</p>
-    <p>some of it is in french i'm sorry</p>
-    <p>reach me on x <b>@merelyacat</b></p>
-    <p>green projects are the most polished projects</p>
+    <p>test website</p>
+    <p>just horsin' around</p>
     <form 
     hx-boost="true"
     hx-target="main"
