--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <button class="finished" name="button" value="circle" type="submit">circle</button>
         <button name="button" value="story" type="submit">story</button>
         <button name="button" value="turten" type="submit">turten</button>
+        <button name="button" value="css" type="submit">css helper</button>
     </form>
 </div>
 {% endblock %}
