--- a/templates/css.html
+++ b/templates/css.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 <p>css variables helper</p>
+<p>will return</p>
+<p>var(--var_1) * var(--var_root) + calc(var(--var_0) * (1 - var(--var_root)))</p>
 <hr>
 <div class="grid">
     <form
